is used to skip monitoring in some cycles.


Version 5.25.2

Fixed: The port connection test may be skipped on some 32-bit platforms.


Version 5.23.0

Fixed: Keep the action-pending status until the action is finished.


Version 5.22.0

Fixed: The connection test retry option was broken and performed always one test with no retry on
error.


Version 5.21.0

Fixed: Issue #547: If the file service is unmonitored or stopped, the read position in the content test
is reset to the end of the file if monitoring is enabled again, so the content which is added while the
service is not monitored will be ignored.

Fixed: Issue #501: check program may fail when parent service is not monitored every cycle and multiple
services depend on it.


Version 5.20.0

New: Issue #448: Added global "set onreboot <start | nostart | laststate>" statement which allows
to override default service startup policy ("onreboot start" by default).

New: Added new options to "set limits" statement, for setting default timeouts:
      programTimeout:    300 seconds # default timeout for check program
      stopTimeout:       30 seconds  # default timeout for service stop
      startTimeout:      30 seconds  # default timeout for service start
      restartTimeout:    30 seconds  # default timeout for service restart

New: The cpu, memory, swap, inode and space tests now allow also decimal values for percent limit.

New: Issue #457: Update HOME environment variable when executing program as other user.

Fixed: Monit HTTP GUI: Listen on IPv6 interface if no address is specified (linux specific issue).

Fixed: Monit HTTP GUI: Support CIDR mask 0 as explicit allow-all IP ACL (e.g. "allow 0.0.0.0/0").

Fixed: Host header if IPv6 address is given in HTTP, APACHE-STATUS or WEBSOCKET protocol tests.

Fixed: Support M/Monit on IPv6 address.

Fixed: Issue #438: When "include /path/*" is used, silently ignore if there the directory is empty.

Fixed: Issue #441: Incomplete logging of restart action.
